working on authentication and JWT